// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`review and drawing baseline before A3 > preserves findings, acknowledgment fingerprints and sheet nodes: ../../../tests/fixtures/legacy-b34-manual.json 1`] = `
{
  "drawingSha256": "75e455b41e659e98ef2f3118632caa4994d4797b345028a8a25da581730facef",
  "findings": [
    {
      "fingerprint": "3e6242d83c21d40b",
      "id": "developer",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "c4351a9910e04a27",
      "id": "responsible",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "074fefc95f6fbff5",
      "id": "location",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "d114363520874852",
      "id": "post-distance",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "3677485a95341a21",
      "id": "crossing",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "986f832d4d234914",
      "id": "template",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "9277498026bc99b2",
      "id": "typesize",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "0fe243e3229953a8",
      "id": "work-conditions",
      "kind": "verify",
      "markBlocked": "Б.33/Б.34: укажите краткосрочные работы и продолжительность не более 24 ч (ГОСТ Р 58350, п. 3.5). Проверьте фронт, длину участка между устройствами и часовую интенсивность в двух направлениях. Выбранный режим не соответствует условиям Б.34: при ограниченной видимости или потоке свыше верхней границы нужны два регулировщика; знаки допускаются только при обеспеченной видимости, потоке менее нормативной границы и участке между устройствами менее нормативной длины. Для одного требуется подтверждение светлого времени суток и прямого участка.",
    },
    {
      "fingerprint": "2531bcf2976037cd",
      "id": "b34-traffic",
      "kind": "verify",
      "markBlocked": "Выбранный режим, отгон или условия работ не соответствуют Б.34: Б.33/Б.34: укажите краткосрочные работы и продолжительность не более 24 ч (ГОСТ Р 58350, п. 3.5). Проверьте фронт, длину участка между устройствами и часовую интенсивность в двух направлениях. Выбранный режим не соответствует условиям Б.34: при ограниченной видимости или потоке свыше верхней границы нужны два регулировщика; знаки допускаются только при обеспеченной видимости, потоке менее нормативной границы и участке между устройствами менее нормативной длины. Для одного требуется подтверждение светлого времени суток и прямого участка..",
    },
    {
      "fingerprint": "927cb50662f1963e",
      "id": "signs",
      "kind": "verify",
      "markBlocked": "Сначала закрепите редакции PNG на этапе 3 («Закрепить редакции PNG»): без закрепления изображения знаков меняются вместе с каталогом.",
    },
    {
      "fingerprint": "163b05aadd21618a",
      "id": "pdd-speed",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "c2417d978857e7b1",
      "id": "pdd-crossing",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "ee292cf37d689396",
      "id": "pdd-temporary",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
  ],
}
`;

exports[`review and drawing baseline before A3 > preserves findings, acknowledgment fingerprints and sheet nodes: ../../../tests/fixtures/legacy-v1-new-fields.json 1`] = `
{
  "drawingSha256": "158cd3f97638ae17f0c9e816781fc958cf0abe6f43475207391b5453ed173dfb",
  "findings": [
    {
      "fingerprint": "3e6242d83c21d40b",
      "id": "developer",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "c4351a9910e04a27",
      "id": "responsible",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "d18dd78ceb0737f5",
      "id": "post-distance",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "3677485a95341a21",
      "id": "crossing",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "4b26eeca7277d102",
      "id": "template",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "b2869fdcda0f628c",
      "id": "work-conditions",
      "kind": "verify",
      "markBlocked": "Б.33/Б.34: укажите краткосрочные работы и продолжительность не более 24 ч (ГОСТ Р 58350, п. 3.5). Подтвердите постоянное присутствие регулировщиков в течение всего срока работ (ОДМ, п. 6.4.3).",
    },
    {
      "fingerprint": "a8ca3f3eaf7bd40f",
      "id": "b34-traffic",
      "kind": "verify",
      "markBlocked": "Выбранный режим, отгон или условия работ не соответствуют Б.34: Б.33/Б.34: укажите краткосрочные работы и продолжительность не более 24 ч (ГОСТ Р 58350, п. 3.5). Подтвердите постоянное присутствие регулировщиков в течение всего срока работ (ОДМ, п. 6.4.3)..",
    },
    {
      "fingerprint": "4ec3e3ead2d69b45",
      "id": "regulator-distance",
      "kind": "verify",
      "markBlocked": "Выпуск недоступен, пока регулировщики на листе не соответствуют способу пропуска. Два регулировщика должны стоять у начала и конца места работ, не ближе 15 м до рабочей зоны при скорости 40 км/ч (ОДМ 218.6.019, таблица 5): на листе регулировщиков: 0 из 2; со стороны начала работ (Z0): 0 вместо 1; со стороны конца работ (Z1): 0 вместо 1. Пересоберите шаблон на этапе 3 или исправьте объекты.",
    },
    {
      "fingerprint": "6bd20f8a744274e3",
      "id": "signs",
      "kind": "verify",
      "markBlocked": "Сначала закрепите редакции PNG на этапе 3 («Закрепить редакции PNG»): без закрепления изображения знаков меняются вместе с каталогом.",
    },
    {
      "fingerprint": "cd071ea65316d0dd",
      "id": "pdd-speed",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "337a4be5cfd4033d",
      "id": "pdd-crossing",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "0a454385aa701d00",
      "id": "pdd-temporary",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "7ae94422552ed10a",
      "id": "pdd-regulator",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
  ],
}
`;

exports[`review and drawing baseline before A3 > preserves findings, acknowledgment fingerprints and sheet nodes: ../../../tests/fixtures/manual-v1.json 1`] = `
{
  "drawingSha256": "18ebbcce02d204dcd270127b1068a4d6c158ced66712f15a396fa66fcf67c3fe",
  "findings": [
    {
      "fingerprint": "3e6242d83c21d40b",
      "id": "developer",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "c4351a9910e04a27",
      "id": "responsible",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "074fefc95f6fbff5",
      "id": "location",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "d875846edb3360e6",
      "id": "crossing",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "6a82ec028dd15ddc",
      "id": "template",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "9277498026bc99b2",
      "id": "typesize",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "8c0b5f4d1c013be3",
      "id": "work-conditions",
      "kind": "verify",
      "markBlocked": "Б.33/Б.34: укажите краткосрочные работы и продолжительность не более 24 ч (ГОСТ Р 58350, п. 3.5). Подтвердите постоянное присутствие регулировщиков в течение всего срока работ (ОДМ, п. 6.4.3).",
    },
    {
      "fingerprint": "4ec3e3ead2d69b45",
      "id": "regulator-distance",
      "kind": "verify",
      "markBlocked": "Выпуск недоступен, пока регулировщики на листе не соответствуют способу пропуска. Два регулировщика должны стоять у начала и конца места работ, не ближе 15 м до рабочей зоны при скорости 40 км/ч (ОДМ 218.6.019, таблица 5): на листе регулировщиков: 0 из 2; со стороны начала работ (Z0): 0 вместо 1; со стороны конца работ (Z1): 0 вместо 1. Пересоберите шаблон на этапе 3 или исправьте объекты.",
    },
    {
      "fingerprint": "8876c67ca3fbc438",
      "id": "signs",
      "kind": "verify",
      "markBlocked": "Сначала закрепите редакции PNG на этапе 3 («Закрепить редакции PNG»): без закрепления изображения знаков меняются вместе с каталогом.",
    },
    {
      "fingerprint": "e7b40f2ba3c2142a",
      "id": "pdd-speed",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "582da8893ba31afb",
      "id": "pdd-crossing",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "21d5ae0d3ea0d864",
      "id": "pdd-temporary",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
  ],
}
`;

exports[`review and drawing baseline before A3 > preserves findings, acknowledgment fingerprints and sheet nodes: ../../../tests/fixtures/review-b33-v4.json 1`] = `
{
  "drawingSha256": "f2c4b35ad903cb36420588789331a1556ad44cf12b346f5e90f190243e7b5b2e",
  "findings": [
    {
      "fingerprint": "3e6242d83c21d40b",
      "id": "developer",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "c4351a9910e04a27",
      "id": "responsible",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "074fefc95f6fbff5",
      "id": "location",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "6568f33ce3f7c774",
      "id": "post-distance",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "f772b96e915d2416",
      "id": "crossing",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "d6dfb6939282a59f",
      "id": "template",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "9277498026bc99b2",
      "id": "typesize",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "7073eb7ba0947073",
      "id": "work-conditions",
      "kind": "verify",
      "markBlocked": "Б.33/Б.34: укажите краткосрочные работы и продолжительность не более 24 ч (ГОСТ Р 58350, п. 3.5). Подтвердите постоянное присутствие регулировщиков в течение всего срока работ (ОДМ, п. 6.4.3).",
    },
    {
      "fingerprint": "f31b93839fd85eb4",
      "id": "regulator-distance",
      "kind": "verify",
      "markBlocked": "Выпуск недоступен, пока регулировщики на листе не соответствуют способу пропуска. Два регулировщика должны стоять у начала и конца места работ, не ближе 15 м до рабочей зоны при скорости 40 км/ч (ОДМ 218.6.019, таблица 5): № 28 — примерно 13 м до рабочей зоны. Пересоберите шаблон на этапе 3 или исправьте объекты.",
    },
    {
      "fingerprint": "5831e08ac2c62c70",
      "id": "signs",
      "kind": "verify",
      "markBlocked": "Сначала закрепите редакции PNG на этапе 3 («Закрепить редакции PNG»): без закрепления изображения знаков меняются вместе с каталогом.",
    },
    {
      "fingerprint": "8e0afaa052e81870",
      "id": "pdd-speed",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "ffea78b60a1385d3",
      "id": "pdd-crossing",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "d175647a0710f548",
      "id": "pdd-temporary",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "bf9dc3619fbb7428",
      "id": "pdd-regulator",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
  ],
}
`;

exports[`review and drawing baseline before A3 > preserves findings, acknowledgment fingerprints and sheet nodes: ../../../tests/fixtures/review-b34-v4.json 1`] = `
{
  "drawingSha256": "685ff121e4b8c6684f0496111124b04385da89d55b1a442620b7797430a64a23",
  "findings": [
    {
      "fingerprint": "3e6242d83c21d40b",
      "id": "developer",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "c4351a9910e04a27",
      "id": "responsible",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "074fefc95f6fbff5",
      "id": "location",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "6568f33ce3f7c774",
      "id": "post-distance",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "4e752e43c9f502f5",
      "id": "crossing",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "ecab2320bbad07c0",
      "id": "template",
      "kind": "verify",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "9277498026bc99b2",
      "id": "typesize",
      "kind": "fill",
      "markBlocked": undefined,
    },
    {
      "fingerprint": "0fe243e3229953a8",
      "id": "work-conditions",
      "kind": "verify",
      "markBlocked": "Б.33/Б.34: укажите краткосрочные работы и продолжительность не более 24 ч (ГОСТ Р 58350, п. 3.5). Проверьте фронт, длину участка между устройствами и часовую интенсивность в двух направлениях. Выбранный режим не соответствует условиям Б.34: при ограниченной видимости или потоке свыше верхней границы нужны два регулировщика; знаки допускаются только при обеспеченной видимости, потоке менее нормативной границы и участке между устройствами менее нормативной длины. Для одного требуется подтверждение светлого времени суток и прямого участка.",
    },
    {
      "fingerprint": "74b52358f6bf3c3d",
      "id": "b34-traffic",
      "kind": "verify",
      "markBlocked": "Выбранный режим, отгон или условия работ не соответствуют Б.34: Б.33/Б.34: укажите краткосрочные работы и продолжительность не более 24 ч (ГОСТ Р 58350, п. 3.5). Проверьте фронт, длину участка между устройствами и часовую интенсивность в двух направлениях. Выбранный режим не соответствует условиям Б.34: при ограниченной видимости или потоке свыше верхней границы нужны два регулировщика; знаки допускаются только при обеспеченной видимости, потоке менее нормативной границы и участке между устройствами менее нормативной длины. Для одного требуется подтверждение светлого времени суток и прямого участка..",
    },
    {
      "fingerprint": "5831e08ac2c62c70",
      "id": "signs",
      "kind": "verify",
      "markBlocked": "Сначала закрепите редакции PNG на этапе 3 («Закрепить редакции PNG»): без закрепления изображения знаков меняются вместе с каталогом.",
    },
    {
      "fingerprint": "8e0afaa052e81870",
      "id": "pdd-speed",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "aa3a144a4a832a89",
      "id": "pdd-crossing",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "48350eed8559747a",
      "id": "pdd-temporary",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
    {
      "fingerprint": "25d4d1d219d63cda",
      "id": "pdd-regulator",
      "kind": "verify",
      "markBlocked": "Добавьте ПДД (постановление от 23.10.1993 № 1090) в библиотеку, укажите редакцию и дату введения. Затем сверяйте условия по этому документу.",
    },
  ],
}
`;
